# anigo-consumet-plugin

./: .replit  Cargo.toml  replit.nix
src/: lib.rs
src/models/: mod.rs
src/providers/: mod.rs
src/providers/animepahe/: info.rs  mod.rs  search.rs  source.rs
src/providers/enime/: mod.rs
src/providers/gogoanime/: mod.rs
