[package]
name = "anigo-consumet-plugin"
version = "0.1.0"
authors = ["FlamesX-128", "anigo-org"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
anigo = { branch = "main", git = "https://github.com/anigo-org/anigo-plugin-model", package = "anigo-plugin-model" }
ureq = { version = "2.5.0", features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
